tests/ui/expr/malformed_closure/missing_block_in_let_binding.rs
fn main() {
    let x = |x|
        let y = x; //~ ERROR expected expression, found `let` statement
        let _ = () + ();
        y
}
